--- a/app/src/main/res/layout/activity_story_builder_main.xml
+++ b/app/src/main/res/layout/activity_story_builder_main.xml
@@ -24,20 +24,20 @@
         android:id="@+id/story_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/quote"/>
+        android:layout_below="@id/quote" />
 
     <TextView
         android:id="@+id/empty"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_below="@+id/quote"
-        android:text="Nothing Here Yet" />
+        android:text="Nothing Here Yet"
+        android:layout_below="@id/quote" />
 
-    <android.support.v4.widget.DrawerLayout
+    <!--<android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" /> -->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
